--- a/02_SyntaxLearn_DataTypes_1.ipynb
+++ b/02_SyntaxLearn_DataTypes_1.ipynb
@@ -203,7 +203,9 @@
     "\n",
     "# اعداد علمی\n",
     "y = 1e+7 # 1 * 10 ** 7\n",
-    "print(y, type(y), sep=' | ')"
+    "print(y, type(y), sep=' | ')\n",
+    "\n",
+    "# اگر اعداد فلوت بسیار بزرگ یا بسیار کوچک باشند inf -inf نمایش داده می شود"
    ]
   },
   {
@@ -229,7 +231,9 @@
     "print(c, type(c), sep=' | ')\n",
     "print(c.real)  # قسمت حقیقی\n",
     "print(c.imag)  # قسمت مجازی\n",
-    "print(c.conjugate())  # مزدوج"
+    "print(c.conjugate())  # مزدوج\n",
+    "\n",
+    "# ضرب و تقسیم و جمع  و تفریق پشتیبانی می شود"
    ]
   },
   {
@@ -252,8 +256,8 @@
    ],
    "source": [
     "# رند کردن\n",
-    "x = 3.2565645\n",
-    "y = round(x, 2)  #دقت رندکردن 2\n",
+    "x = 3.2575645\n",
+    "y = round(x, 2)  # گرد میکند - دقت رندکردن 2\n",
     "print(y, end='\\n\\n')\n",
     "\n",
     "#قدر مطلق\n",
@@ -317,7 +321,9 @@
     "x = 2.36\n",
     "print(\"int?\", isinstance(x, int))\n",
     "print(\"str?\", isinstance(x, str))\n",
-    "print(\"float?\", isinstance(x, float))"
+    "print(\"float?\", isinstance(x, float))\n",
+    "\n",
+    "#اینپوت تایپ رشته میگیرد "
    ]
   },
   {
@@ -408,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 90,
    "id": "85eaa27d-8519-4aff-af71-2cf106e43cc2",
    "metadata": {},
    "outputs": [
@@ -417,25 +423,63 @@
      "output_type": "stream",
      "text": [
       "e\n",
-      "e\n",
+      "w\n",
       "ell\n",
-      "ell\n",
-      "Hel!lo\n"
+      "ello wor\n",
+      "Hel!lo word\n",
+      "Hello word\n"
+     ]
+    },
+    {
+     "ename": "IndexError",
+     "evalue": "string index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[90], line 8\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[38;5;28mprint\u001b[39m(s[:\u001b[38;5;241m3\u001b[39m]\u001b[38;5;241m+\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m!\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m+\u001b[39ms[\u001b[38;5;241m3\u001b[39m:])\n\u001b[1;32m      7\u001b[0m \u001b[38;5;28mprint\u001b[39m(s[:\u001b[38;5;241m456\u001b[39m])\n\u001b[0;32m----> 8\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43ms\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m234\u001b[39;49m\u001b[43m]\u001b[49m)\n",
+      "\u001b[0;31mIndexError\u001b[0m: string index out of range"
      ]
     }
    ],
    "source": [
-    "s = \"Hello\"\n",
+    "s = \"Hello word\"\n",
     "print(s[1])\n",
     "print(s[-4])\n",
     "print(s[1:4]) # اسلایسینگ، ایندکس آخر نمایش داده نمی شود\n",
     "print(s[1:-1])\n",
-    "print(s[:3]+\"!\"+s[3:])"
+    "print(s[:3]+\"!\"+s[3:])\n",
+    "print(s[:456])\n",
+    "print(s[234]) #error"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 91,
+   "id": "9ec798e5-db68-470e-8a79-78ec81994ea7",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'str' object does not support item assignment",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[91], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m s \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mHello word\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m----> 3\u001b[0m s[\u001b[38;5;241m3\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124md\u001b[39m\u001b[38;5;124m'\u001b[39m\n",
+      "\u001b[0;31mTypeError\u001b[0m: 'str' object does not support item assignment"
+     ]
+    }
+   ],
+   "source": [
+    "s = \"Hello word\"\n",
+    "\n",
+    "s[3] = 'd' #error we can`t change"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
    "id": "cf4570a0-01c4-4e52-bb41-80ac9110b48f",
    "metadata": {},
    "outputs": [
@@ -443,14 +487,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "HlWl\n"
+      "HlWl\n",
+      "loWr\n"
      ]
     }
    ],
    "source": [
     "# می توان در اسلایسینگ گام را هم مشخص کرد\n",
     "s = \"Hello World!\"\n",
-    "print(s[::3])"
+    "print(s[::3])\n",
+    "print(s[2:-2:2])"
    ]
   },
   {
@@ -475,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 93,
    "id": "eddcc42c-c02a-4fd2-ab21-0abc5502ab47",
    "metadata": {},
    "outputs": [
@@ -483,19 +529,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "12\n"
+      "12\n",
+      "!\n"
      ]
     }
    ],
    "source": [
     "# بدست آوردن اندازه رشته\n",
     "s = \"Hello World!\"\n",
-    "print(len(s))"
+    "print(len(s))\n",
+    "\n",
+    "#print last character\n",
+    "print(s[len(s)-1])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 94,
    "id": "f2aed6e8-9c79-43c7-a811-ebcb7261b9c9",
    "metadata": {},
    "outputs": [
@@ -522,6 +572,9 @@
     }
    ],
    "source": [
+    "# برخی متد ها رشته را تغییر نمیدهند و باید رشته را اپدیت کرد\n",
+    "# s = s.upper()\n",
+    "\n",
     "# متد های کلاس رشته ها\n",
     "s = \"Hello World!\"\n",
     "print(s.upper())  # تمام حروف رشته را بصورت بزرگ برمیگرداند\n",
@@ -539,7 +592,8 @@
     "print(s.split(' '))  # جدا کردن رشته در یک لیست با اسفتاده از رشته مشخص\n",
     "print(s.replace('!', '?'))  # برگرداندن جایگزینی رشته مشخص اول با رشته مشخص دوم\n",
     "print(s.strip('!'))  # حذف کاراکتر مشخص از دو طرف رشته. اگر فقط چپ باشد قبل اِل و اگر فقط راست قبل آر \n",
-    "print('salam'.capitalize())  # بزرگ کردن حرف اول رشته"
+    "# اگر چیزی پاس ندهیم مثل trim\n",
+    "print('salam'.capitalize())  # "
    ]
   },
   {
@@ -613,9 +667,39 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "d38026a9-7a72-42df-b95c-4769b1cac5c7",
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "2b523494-33d4-4f0c-bcc8-580520ef09e8",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "enter your msg for delete its space asfdsf    sdf adf      \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "asfdsfsdfadf\n"
+     ]
+    }
+   ],
+   "source": [
+    "# exercise\n",
+    "str = input(\"enter your msg for delete its space\")\n",
+    "\n",
+    "print(str.replace(\" \" , \"\").replace(\"\\t\" , \"\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "525d5102-921d-4bb6-a981-0ad8b5d4be54",
+   "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
@@ -641,7 +725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 66,
    "id": "757cd198-b4cc-49f1-826b-d0507ec6e948",
    "metadata": {},
    "outputs": [
@@ -656,6 +740,8 @@
       "\n",
       "استفاده از ایندکس ها\n",
       "r\n",
+      "['W', 'o', 'r', 'l', 'd', '!']\n",
+      "['r', 'd']\n",
       "\n",
       "جمع و ضرب لیست ها\n",
       "['H', 'e', 'l', 'l', 'o', 'H', 'e', 'l', 'l', 'o', 'W', 'o', 'r', 'l', 'd', '!']\n"
@@ -674,6 +760,9 @@
     "\n",
     "print(\"\\nاستفاده از ایندکس ها\")\n",
     "print(ch[2])\n",
+    "print(ch[:])\n",
+    "print(ch[2:6:2])\n",
+    "\n",
     "\n",
     "print(\"\\nجمع و ضرب لیست ها\")\n",
     "print(L * 2 + ch)"
@@ -681,7 +770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 74,
    "id": "d306cab8-dcb2-45f1-a098-3c25590c4334",
    "metadata": {},
    "outputs": [
@@ -690,24 +779,32 @@
      "output_type": "stream",
      "text": [
       "L= ['H', 'e', 'l', 'l', '!']\n",
-      "L==M? False\n"
+      "L==w? True\n",
+      "L==M? False\n",
+      "True\n"
      ]
     }
    ],
    "source": [
-    "# قابلیت تغییر عناصر لیست\n",
+    "#  mutable قابلیت تغییر عناصر لیست\n",
     "L = ['H', 'e', 'l', 'l', 'o']\n",
     "L [-1] = '!'\n",
-    "print('L=',L)\n",
+    "print('L=',L) \n",
+    "\n",
+    "w = ['H', 'e', 'l', 'l', '!']\n",
+    "print('L==w?',L == w)\n",
     "\n",
     "#جای عنصر ها در لیست مهم است\n",
     "M = ['e', 'H', 'l', 'l', '!']\n",
-    "print('L==M?',L == M)"
+    "print('L==M?',L == M)\n",
+    "\n",
+    "# in list and strings\n",
+    "print('e' in M)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 72,
    "id": "628c2d65-033d-4222-9e0e-f58d7cf39040",
    "metadata": {},
    "outputs": [
@@ -727,7 +824,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 76,
+   "id": "d41ba2c4-aa0c-4892-8bae-f2ff5da924c2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "L1: 2 \tid(L1): 139718569230608\n",
+      "L2: 5 \tid(L2): 139718569230704\n"
+     ]
+    }
+   ],
+   "source": [
+    "L1 = 2\n",
+    "L2 = L1\n",
+    "L2 = 5\n",
+    "print('L1:',L1,'\\tid(L1):',id(L1))\n",
+    "print('L2:',L2,'\\tid(L2):',id(L2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
    "id": "1939b27b-6b21-4696-acec-008e07ee8689",
    "metadata": {},
    "outputs": [
@@ -735,12 +855,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "L1: [0, 2, ['a', 'b']] \tid(L1): 2431261172672\n",
-      "L2: [0, 2, ['a', 'b']] \tid(L2): 2431261172672\n",
+      "L1: [0, 2, ['a', 'b']] \tid(L1): 139718442196736\n",
+      "L2: [0, 2, ['a', 'b']] \tid(L2): 139718442196736\n",
       "\n",
       "راه حل: ایجاد کپی\n",
-      "L1: [0, 2, ['a', 'b']] \tid(L1): 2431261172672\n",
-      "L3: [9, 2, ['a', 'b']] \tid(L3): 2431261092544\n"
+      "L1: [0, 2, ['a', 'b']] \tid(L1): 139718442196736\n",
+      "L3: [9, 2, ['a', 'b']] \tid(L3): 139718078545408\n"
      ]
     }
    ],
@@ -753,7 +873,7 @@
     "print('L2:',L2,'\\tid(L2):',id(L2))\n",
     "\n",
     "print(\"\\nراه حل: ایجاد کپی\")\n",
-    "L3 = L1.copy()\n",
+    "L3 = L1.copy() #or l3 = l1[:]\n",
     "L3[0] = 9\n",
     "print('L1:',L1,'\\tid(L1):',id(L1))\n",
     "print('L3:',L3,'\\tid(L3):',id(L3))"
@@ -812,7 +932,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 85,
    "id": "caf71236-a8a6-4574-8fb6-d9cc39b6c1f5",
    "metadata": {},
    "outputs": [
@@ -821,16 +941,19 @@
      "output_type": "stream",
      "text": [
       "append\n",
-      "[1, 2, 3, 4, 5, 6, 7]\n",
+      "[1, 2, 3, 4, 5, 6, 7, [2, 4]]\n",
+      "\n",
+      "تغییر عضو\n",
+      "[1, 2, 32, 3, 6, 7, [2, 4]]\n",
       "\n",
       "حذف عضو\n",
-      "[1, 2, 6, 7]\n",
+      "[1, 2, 7, [2, 4]]\n",
       "\n",
       "اندازه لیست\n",
       "4\n",
       "\n",
       "استفاده از لیست در مقدار دهی\n",
-      "a = 1 b = [2, 6] c = 7\n"
+      "a = 1 b = [2, 3, 4, 5] c = 6\n"
      ]
     }
    ],
@@ -839,23 +962,30 @@
     "L = [1,2,3,4,5,6]\n",
     "print(\"append\") # اضافه کردن عنصر به لیست\n",
     "L.append(7)\n",
+    "L.append([2,4])\n",
+    "print(L, end='\\n\\n')\n",
+    "\n",
+    "print(\"تغییر عضو\")\n",
+    "L[2:5] = [ 32, 3 ]\n",
     "print(L, end='\\n\\n')\n",
     "\n",
     "print(\"حذف عضو\")\n",
     "del L[2:5]\n",
+    "# del L    delete whole of list\n",
     "print(L, end='\\n\\n')\n",
     "\n",
     "print(\"اندازه لیست\")\n",
     "print(len(L), end='\\n\\n')\n",
     "\n",
     "print(\"استفاده از لیست در مقدار دهی\")\n",
+    "L = [1,2,3,4,5,6]\n",
     "a, *b, c = L\n",
     "print('a =',a ,'b =',b ,'c =',c)  #با استفاده از * متغیر اضافی را در خود قرار می دهد"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 89,
    "id": "9fb1c2f4-6dc7-4674-8684-cbe27ed78c09",
    "metadata": {},
    "outputs": [
@@ -865,10 +995,15 @@
      "text": [
       "(1, 2, 'reza', [3, 4], (5, 6))\n",
       "<class 'tuple'>\n",
+      "<class 'tuple'>\n",
+      "<class 'int'>\n",
+      "<class 'tuple'>\n",
       "(1, 2, [0, 4, 5], 6)\n",
       "('r', 'e', 'z', 'a')\n",
       "[1, 2, [0, 4, 5], 6]\n",
-      "<class 'tuple'>\n"
+      "<class 'tuple'>\n",
+      "استفاده از تاپل در مقدار دهی\n",
+      "a = 1 b = [2, 3, 4, 5] c = 6\n"
      ]
     }
    ],
@@ -877,12 +1012,19 @@
     "x = (1,2 , 'reza', [3,4], (5,6)) # دو تفاوت با لیست یک با پرانتز دو غیر قابل تغییر\n",
     "print(x)\n",
     "#x.append(7) غیر قابل انجام\n",
-    "#x[1] = 0 غیر قابل انجام\n",
+    "#x[1] = 0 immutable  غیر قابل انجام\n",
     "# با توجه به غیر قابل تغییر بودن تاپل ها آنها از لیست ها حافظه کمتری مصرف میکنند و بهینه تر اند\n",
     "# از طرف تاپل ها می توانند امنیت بیشتری برای داده ها تامین کرد\n",
     "\n",
     "t = 1,2,3,4  # نوع دیگری از تعریف تاپل\n",
     "print(type(t))\n",
+    "t = ()\n",
+    "print(type(t))\n",
+    "t = (1)\n",
+    "print(type(t))\n",
+    "t = (1,)\n",
+    "print(type(t))\n",
+    "\n",
     "\n",
     "# تغییر لیست در تاپل\n",
     "t = (1,2,[3,4,5],6)\n",
@@ -890,7 +1032,13 @@
     "print(t)\n",
     "print(tuple(\"reza\")) # خروجی تاپل گرفتن\n",
     "print(list(t)) # تبدیل به لیست جهت تغییر و سپس تبدیل به تاپل راهی برای تغییر تاپل\n",
-    "t = tuple(list(t)); print(type(t))"
+    "t = tuple(list(t)); print(type(t))\n",
+    "\n",
+    "print(\"استفاده از تاپل در مقدار دهی\")\n",
+    "L = (1,2,3,4,5,6)\n",
+    "a, *b, c = L\n",
+    "print('a =',a ,'b =',b ,'c =',c)  # این ویژگی در استرینگ ها هم وجود دارد\n",
+    "# با استفاده از * متغیر اضافی را در خود قرار می دهد"
    ]
   },
   {
@@ -911,7 +1059,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 95,
    "id": "f913279a-5837-43e5-ae3e-12243fc0dd17",
    "metadata": {},
    "outputs": [
@@ -933,6 +1081,8 @@
     "print(d[\"a\"])\n",
     "\n",
     "# کلید ها هر نوع داده غیر قابل تغییر مثلا غیر از لیست می تواند باشد\n",
+    "# tuple int str\n",
+    "# داخل تاپل مقدار قابل تغییر نباید داشته باشد\n",
     "# ولی مقدار هر نوعی می تواند باشد\n",
     "d1 = {1 : 5, 'l' : [1,2], (1,2,3) : 'tuple'}\n",
     "#d2 = {[1,2,3] : \"list\"}  # غلط"
@@ -973,7 +1123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 98,
    "id": "4186b22e-f967-4bc8-a171-96098142a485",
    "metadata": {},
    "outputs": [
@@ -986,7 +1136,9 @@
       "dict_values([80, 20, 40])\n",
       "dict_items([('a', 80), ('b', 20), ('c', 40)])\n",
       "['a', 'b', 'c']\n",
-      "{'a': 80, 'b': 20}\n"
+      "{'a': 80, 'b': 20}\n",
+      "{'a': 10, 'b': 15, 'c': 40, 'd': 70}\n",
+      "{1: 10, 'b': 15, (1, 2): 40}\n"
      ]
     }
    ],
@@ -1004,7 +1156,10 @@
     "\n",
     "del d[\"c\"]; print(d) # حذف یک عنصر با کلیدش\n",
     "\n",
-    "d = dict(a=10, b=15, c= 40, d=70) # شکل دیگری از تعریف دیکت که لازم است کلید ها حتما رشته باشند و  کلیدها یکتا باشند"
+    "d = dict(a=10, b=15, c= 40, d=70) # شکل دیگری از تعریف دیکت که لازم است کلید ها حتما رشته باشند و  کلیدها یکتا باشند\n",
+    "print(d)\n",
+    "d = dict([(1 ,10), (\"b\" ,15), ((1 ,2) ,40)]) \n",
+    "print(d)\n"
    ]
   },
   {
@@ -1069,7 +1224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 101,
    "id": "f67a6311-3a9c-4baf-ae27-b4c5ae68c167",
    "metadata": {},
    "outputs": [
@@ -1077,6 +1232,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "3\n",
+      "True\n",
+      "True\n",
       "{'name': 'ali', 'age': 14}\n",
       "19\n",
       "r\n"
@@ -1091,6 +1249,13 @@
     "    \"256\" : {\"name\":\"zahra\", \"age\":19}\n",
     "}\n",
     "\n",
+    "print(len(d))\n",
+    "print(\"169\" in d)\n",
+    "print(d == {\n",
+    "    \"169\" : {\"name\":\"reza\", \"age\":25},\n",
+    "    \"172\" : {\"name\":\"ali\", \"age\":14},\n",
+    "    \"256\" : {\"name\":\"zahra\", \"age\":19}\n",
+    "})\n",
     "print(d[\"172\"])\n",
     "print(d[\"256\"][\"age\"])\n",
     "print(d[\"169\"][\"name\"][0]) # ایندکس گذاری برای خروجی رشته"
@@ -1101,7 +1266,8 @@
    "id": "a1363f74-29a5-408e-94c8-b4ab07fb9de6",
    "metadata": {},
    "source": [
-    "*** نام دیگر دیکشنری نگاشت یا maping"
+    "*** نام دیگر دیکشنری نگاشت یا maping\n",
+    "جمع و ضرب در دیکشنری ها اعمال نمیشه"
    ]
   },
   {
@@ -1177,7 +1343,9 @@
     "# در مجموعه ها عناصر ایندکس ندارند. کلا ایندکست برای توالی ها است\n",
     "s1 = {1,4,2,'a'}; print(s1)\n",
     "# در مواردی که تمایل ندارید تکراری ثبت کنید مجموعه ها خوب است\n",
+    "#mutable\n",
     "\n",
+    "s4= set([1,21,3,1])\n",
     "s2 = {} # دیکشنری است مجموعه نیست\n",
     "s3 = {' '}  # مجموعه است و دیکشنری نیست\n",
     "\n",
@@ -1301,6 +1469,45 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "id": "eb829462-d01a-44d3-b993-c136d2814462",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, ['a', 'b', 'c']]\n",
+      "[1, 2, 'a', 'b', 'c']\n"
+     ]
+    }
+   ],
+   "source": [
+    "l1 = [ 1, 2, 3]\n",
+    "l2 = [ 'a', 'b', 'c']\n",
+    "l1[-1] = l2\n",
+    "print(l1)\n",
+    "\n",
+    "\n",
+    "l1 = [ 1, 2, 3]\n",
+    "l2 = [ 'a', 'b', 'c']\n",
+    "l1[-1:] = l2\n",
+    "print(l1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7dc1d22a-d428-4c1d-b084-03b0971ccad9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "meaning = input('enter :').split(\",\") \n",
+    "# وقتی ورودی ها را با ویرگول جدا میکنیم"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "id": "9a233314-fbbb-4830-be7f-bfbad64af064",
    "metadata": {},
@@ -1339,7 +1546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 7,
    "id": "b7de1a65-1a01-4b9e-b477-2e0e6c6517f7",
    "metadata": {},
    "outputs": [
@@ -1357,7 +1564,8 @@
       "True\n",
       "False\n",
       "\n",
-      "Hello\n"
+      "Hello\n",
+      "Asb none?\n"
      ]
     }
    ],
@@ -1381,10 +1589,14 @@
     "    print('World!')\n",
     "if ([]):\n",
     "    print('Asb?')\n",
+    "if ([None]):\n",
+    "    print('Asb none?')\n",
     "if ({}):\n",
     "    print('OHHH?')\n",
     "if (set()):\n",
-    "    print('setttt')"
+    "    print('setttt')\n",
+    "    \n",
+    "# 0j-0.0-0 => zero , False , None , () , \"\" , set() , {} , []"
    ]
   },
   {
@@ -1462,7 +1674,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
