--- a/04_SyntaxLearn_Control_ifelse.ipynb
+++ b/04_SyntaxLearn_Control_ifelse.ipynb
@@ -191,16 +191,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "454bec5e-c642-45af-9240-75f445f62ede",
+   "execution_count": 1,
+   "id": "b542ce57-16fc-44d2-b48c-1f80181e3fed",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "enter x: 5\n",
+      "enter y: 6\n",
+      "enter z: 8\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = int(input('enter x:'))\n",
+    "y = int(input('enter y:'))\n",
+    "z = int(input('enter z:'))\n",
+    "\n",
+    "min = x \n",
+    "if x > y:\n",
+    "    min = y\n",
+    "if y > z:\n",
+    "    min = z\n",
+    "\n",
+    "print(min)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "2781b47c-15f7-4611-8f7d-70e5a6de73c9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "101\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(ord(\"e\"))\n",
+    "# to get ascii code of character"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2781b47c-15f7-4611-8f7d-70e5a6de73c9",
+   "id": "8eaf7256-b14f-41e4-9bd4-420c622df885",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -215,29 +263,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 22,
    "id": "7e4b9630-5722-4bdd-9baf-32ef3b7d2217",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n",
-      "1\n",
-      "29\n",
-      "ali\n",
-      "zeydan\n",
-      "57\n",
-      "6\n",
-      "60\n"
+     "ename": "TypeError",
+     "evalue": "'int' object is not callable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[22], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m L \u001b[38;5;241m=\u001b[39m [\u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m12\u001b[39m, \u001b[38;5;241m15\u001b[39m, \u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m2\u001b[39m]\n\u001b[0;32m----> 2\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;28;43mmin\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mL\u001b[49m\u001b[43m \u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdefault\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mError!\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m) \u001b[38;5;66;03m# اگر بصورت لیست باشد می توان از دیفالت استفاده کرد\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;28mmin\u001b[39m(\u001b[38;5;241m1\u001b[39m,\u001b[38;5;241m2\u001b[39m,\u001b[38;5;241m3\u001b[39m,\u001b[38;5;241m4\u001b[39m,\u001b[38;5;241m5\u001b[39m))\n\u001b[1;32m      4\u001b[0m \u001b[38;5;66;03m# if list or tuple are empety ,default value shown\u001b[39;00m\n",
+      "\u001b[0;31mTypeError\u001b[0m: 'int' object is not callable"
      ]
     }
    ],
    "source": [
-    "L = [0, 12, 15, 1, 29]\n",
-    "print(min(L, default='Error!')) # اگر بصورت لیست باشد می توان از دیفالت استفاده کرد\n",
+    "L = [0, 12, 15, 1, 2]\n",
+    "print(min(L , default = 'Error!')) # اگر بصورت لیست باشد می توان از دیفالت استفاده کرد\n",
     "print(min(1,2,3,4,5))\n",
+    "# if list or tuple are empety ,default value shown\n",
     "\n",
     "print(max(L))\n",
     "\n",
@@ -248,6 +294,22 @@
     "print(sum([1,2,3])) # حتمال داخل لیست یا تاپل یا مجموعه\n",
     "print(sum(L, start = 3)) # استارت، عددی است که به نتیجه جمع اضافه می شود"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "09686a61-6e57-43cb-afae-b7f78e07d626",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2174c02f-fca9-45f9-965f-f2652a11b32f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -266,7 +328,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
