--- a/05_SyntaxLearn_Control_Iteration.ipynb
+++ b/05_SyntaxLearn_Control_Iteration.ipynb
@@ -156,7 +156,7 @@
     "i = 1\n",
     "while i <= 20:\n",
     "    print(a)\n",
-    "    a, b = b, a+b  # مقدار دهی بصورت همزمان انجام میشود\n",
+    "    a, b = b, a+b  # اگر در دو خط جدا بنویسیم اشتباه میشود   مقدار دهی بصورت همزمان انجام میشود\n",
     "    i += 1"
    ]
   },
@@ -263,6 +263,7 @@
     }
    ],
    "source": [
+    "# دستورات بعد کنتینیو اجرا نشده و حلقه از ابتدا شروع به اجرا دستورات میکند\n",
     "i = 0\n",
     "while i<10:\n",
     "    i += 1\n",
@@ -273,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "id": "503563e3-63a8-4800-b153-5d2cbcb334ed",
    "metadata": {},
    "outputs": [
@@ -281,19 +282,19 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "n:  7\n"
+      "n:  ۱۲\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "7 Is a prime number.\n"
+      "12 is Not a prime number!\n"
      ]
     }
    ],
    "source": [
-    "# else در حلقه وایل برای بررسی اتمام بدون شکست حلقه\n",
+    "# else  زمانیکه بریک و خطایی رخ ندهد   در حلقه وایل برای بررسی اتمام بدون شکست حلقه\n",
     "# در شرایطی که حلقه بدون بریک اتمام یابد دستورات الس اجرا می شود\n",
     "n = int(input(\"n: \"))\n",
     "i = 2\n",
@@ -307,6 +308,160 @@
     "        print(n, \"Is a prime number.\")\n",
     "else:\n",
     "    print(n, \"is Not a prime number!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "dde4b2c8-374d-4b18-9a0b-50ce4f1e329f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\t 1\n",
+      "\t 2\n",
+      "\t 3\n",
+      "\t 4\n",
+      "\t 5\n",
+      "1\n",
+      "\t 1\n",
+      "\t 2\n",
+      "\t 3\n",
+      "\t 4\n",
+      "\t 5\n",
+      "2\n",
+      "\t 1\n",
+      "\t 2\n",
+      "\t 3\n",
+      "\t 4\n",
+      "\t 5\n",
+      "3\n",
+      "\t 1\n",
+      "\t 2\n",
+      "\t 3\n",
+      "\t 4\n",
+      "\t 5\n",
+      "4\n",
+      "\t 1\n",
+      "\t 2\n",
+      "\t 3\n",
+      "\t 4\n",
+      "\t 5\n",
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "# nested loop\n",
+    "i = 1\n",
+    "while i <= 5:\n",
+    "    j = 1\n",
+    "    while j <= 5:\n",
+    "        print(\"\\t\" , j)\n",
+    "        j += 1\n",
+    "    print(i)\n",
+    "    i += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "539b6590-24c1-486b-9f3d-cda6fb35668f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\t 1\n",
+      "\t 2\n",
+      "\t 3\n",
+      "\t 4\n",
+      "\t 5\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "i = 1\n",
+    "j = 1\n",
+    "while i <= 5:\n",
+    "    while j <= 5:\n",
+    "        print(\"\\t\" , j)\n",
+    "        j += 1\n",
+    "    print(i)\n",
+    "    i += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "fadf3d38-1564-47ea-95bd-2e77c3938bdd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "AlI\n",
+      "AmIr\n"
+     ]
+    }
+   ],
+   "source": [
+    "l = [\"ali\" , \"amir\"]\n",
+    "i = 0\n",
+    "while i < len(l):\n",
+    "    s = l[i]\n",
+    "    j = 0\n",
+    "    while j < len(s):\n",
+    "        if j % 2 == 0:\n",
+    "            print(s[j].upper() , end=\"\")\n",
+    "        else : \n",
+    "            print(s[j], end=\"\")\n",
+    "        j += 1\n",
+    "    print() #for space between words\n",
+    "    i += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "151dc0b7-4109-47a4-8242-1b74d101c848",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\t2\t3\t4\t5\t6\t7\t8\t9\t10\t\n",
+      "2\t4\t6\t8\t10\t12\t14\t16\t18\t20\t\n",
+      "3\t6\t9\t12\t15\t18\t21\t24\t27\t30\t\n",
+      "4\t8\t12\t16\t20\t24\t28\t32\t36\t40\t\n",
+      "5\t10\t15\t20\t25\t30\t35\t40\t45\t50\t\n",
+      "6\t12\t18\t24\t30\t36\t42\t48\t54\t60\t\n",
+      "7\t14\t21\t28\t35\t42\t49\t56\t63\t70\t\n",
+      "8\t16\t24\t32\t40\t48\t56\t64\t72\t80\t\n",
+      "9\t18\t27\t36\t45\t54\t63\t72\t81\t90\t\n",
+      "10\t20\t30\t40\t50\t60\t70\t80\t90\t100\t\n"
+     ]
+    }
+   ],
+   "source": [
+    "i = 1\n",
+    "while i <= 10:\n",
+    "    j = 1\n",
+    "    while j <= 10:\n",
+    "        print(i*j, end=\"\\t\")\n",
+    "        j += 1\n",
+    "    print() # for next line\n",
+    "    i += 1"
    ]
   },
   {
@@ -491,7 +646,8 @@
       "2-3-4-5-6-7-8-9-\n",
       "******************************\n",
       "0-3-6-9-12-15-18-21-24-27-30-\n",
-      "******************************\n"
+      "******************************\n",
+      "-20\t-33\t-46\t-59\t-72\t-85\t-98\t-111\t-124\t"
      ]
     }
    ],
@@ -513,7 +669,9 @@
     "for i in range(0,31,3): # عدد 3 گام رنج هست\n",
     "    print(i, end = \"-\") \n",
     "print()\n",
-    "print('*'*30)"
+    "print('*'*30)\n",
+    "for i in range(-20, -131, -13):  \n",
+    "    print(i, end = \"\\t\") "
    ]
   },
   {
@@ -706,7 +864,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 18,
    "id": "a12f8012-3f46-4e17-94a2-c2bb5971b847",
    "metadata": {},
    "outputs": [
@@ -735,7 +893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 20,
    "id": "66f9812c-3729-44a5-a8f2-c7d6be64973d",
    "metadata": {},
    "outputs": [
@@ -743,31 +901,35 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "7.9601361344286765\n",
-      "7.118737041174807\n",
-      "7.650440050590032\n",
-      "5.6515147062374025\n",
-      "5.959985787696463\n",
-      "7.222867869365065\n",
+      "8.104957275690335\n",
+      "9.853676137894785\n",
+      "6.813962592390542\n",
+      "8.798933061217655\n",
+      "6.843419073841034\n",
+      "7.860233905958904\n",
       "******************************\n",
+      "8\n",
       "6\n",
+      "5\n",
       "7\n",
-      "5\n",
-      "5\n",
       "******************************\n",
       "10\n",
       "8\n",
+      "9\n",
       "8\n",
+      "******************************\n",
       "5\n",
+      "5\n",
+      "5\n",
+      "8\n",
       "******************************\n",
-      "72\n",
-      "9\n",
-      "9\n",
-      "56\n",
+      "e\n",
+      "b\n",
+      "e\n",
       "******************************\n",
-      "['c', 'a']\n",
+      "['a', 'e']\n",
       "******************************\n",
-      "['d', 'e', 'c', 'a', 'b']\n"
+      "['c', 'b', 'e', 'd', 'a']\n"
      ]
     }
    ],
@@ -790,9 +952,13 @@
     "      print(random.randint(5,10)) # متدی برای تولید اعداد تصادفی صحیح و خود انتهای بازه هم می تواند باشد\n",
     "print(\"*\"*30) # *****************************************************************************\n",
     "\n",
-    "l = ['a','b','c','d','e']\n",
     "for _ in range(4):\n",
-    "      print(random.choice(l2)) # انتخاب تصادفی از بین لیست\n",
+    "      print(random.randrange(5,10,3)) #  گام هم میتونیم تعیین بکنیم ـ متدی برای تولید اعداد تصادفی صحیح و خود انتهای بازه هم می تواند باشد\n",
+    "print(\"*\"*30) # *****************************************************************************\n",
+    "\n",
+    "l = ['a','b','c','d','e']\n",
+    "for _ in range(3):\n",
+    "      print(random.choice(l)) # انتخاب تصادفی از بین لیست\n",
     "print(\"*\"*30) # *****************************************************************************\n",
     "\n",
     "print(random.sample(l,2)) # از لیست یک نمونه تصادفی تولید می کند\n",
@@ -835,6 +1001,118 @@
    "source": [
     "از numpy هم می توان اعداد تصادفی تولید کرد که نیازمند نصب هست تا بتوان ایمپورت کرد"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "1478e5b7-f0a1-4206-94bd-95f11287dbf7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "x : 23\n",
+      "y : 23\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "23\n",
+      "******************************\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "x : 23\n",
+      "y : 23\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "23\n"
+     ]
+    }
+   ],
+   "source": [
+    "# بزرگترین مقسوم علیه مشترک\n",
+    "x = int(input('x :'))\n",
+    "y = int(input('y :'))\n",
+    "\n",
+    "min_ = min(x , y)\n",
+    "tem = 0\n",
+    "for i in range(1 , (min_+1)):\n",
+    "    if (x%i == 0) and (y%i == 0):\n",
+    "        if i > tem :\n",
+    "            tem = i\n",
+    "            \n",
+    "print(tem)\n",
+    "\n",
+    "print('*'*30)\n",
+    "\n",
+    "\n",
+    "# بزرگترین مقسوم علیه مشترک\n",
+    "x = int(input('x :'))\n",
+    "y = int(input('y :'))\n",
+    "\n",
+    "min_ = min(x , y)\n",
+    "for i in range(min_ , 0 , -1):\n",
+    "    if (x%i == 0) and (y%i == 0):\n",
+    "        print(i)\n",
+    "        break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "2f30b645-b6a5-4a5c-8b9d-e671661b21d2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "e is your choice?(y/n) \n",
+      "a is your choice?(y/n) y\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "you done!\n"
+     ]
+    }
+   ],
+   "source": [
+    "from random import choice\n",
+    "name = ['a' , 'e' , 'r' , 't' , 'y']\n",
+    "name_cop = name.copy()\n",
+    "\n",
+    "while True : \n",
+    "    if len(name_cop) == 0: \n",
+    "        break\n",
+    "    cmp_choice = choice(name_cop)\n",
+    "    ans = input(f\"{cmp_choice} is your choice?(y/n)\")\n",
+    "    if ans == \"y\":\n",
+    "        print(\"you done!\")\n",
+    "        break\n",
+    "    name_cop.remove(cmp_choice)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a2121e84-dcde-4bc2-a5d1-8dda613f6a58",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -853,7 +1131,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
