--- a/06_SyntaxLearn_Function_1_Syntax.ipynb
+++ b/06_SyntaxLearn_Function_1_Syntax.ipynb
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "7947788f-8fd2-48a5-9faa-e81d90f656ac",
    "metadata": {},
    "outputs": [
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "id": "1f046d60-8b28-4cc1-b444-8e88640eb587",
    "metadata": {},
    "outputs": [
@@ -372,6 +372,8 @@
     "# normal  +  name/value\n",
     "max3(4, c=9, b=5)  # a با توجه به ترتیب مقدار گرفت ولی بقیه با اسمشان\n",
     "# در این روش باید اول آرگومان هایی نوشته شود که قرار نیست اسمشان را بنویسیم\n",
+    "# max3(5 , a=7 , c=9) --> * error   beacause a assigne at first argument\n",
+    "\n",
     "\n",
     "# *iterable (str, tuple, list, set)\n",
     "l = [5,6,4]\n",
@@ -392,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 20,
    "id": "6fc490b6-39ae-49c0-a93e-4a48c77f434f",
    "metadata": {},
    "outputs": [
@@ -424,6 +426,7 @@
     "func3(a=2, b=3)\n",
     "\n",
     "# *name  (در شرایطی که ممکن است آرگومان ها بیشتر از پارامتر ها باشند مناسب است\n",
+    "a , b ,*c = [1,2,3,4,5,9]\n",
     "def func4(a, b, *c):\n",
     "    pass\n",
     "    return None\n",
@@ -444,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "df1f5fef-591f-409a-8e14-f945bc57c595",
    "metadata": {},
    "outputs": [
@@ -544,6 +547,7 @@
    ],
    "source": [
     "# باید در اولین خط بعد معرفی اسم و پارامتر های تابع در داخل 3تا کوتیشن آورده شود\n",
+    "# بهتره دابل کوتیشن باشد \n",
     "def max3(x, y, z):\n",
     "    \"\"\" Receives 3 numb as input and returns the largest of them \"\"\"\n",
     "    return max(x, y ,z)\n",
@@ -630,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 30,
    "id": "eb1af27f-3b3a-4b66-8fd1-cb17c8954709",
    "metadata": {},
    "outputs": [
@@ -638,19 +642,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<class 'int'> 12\n",
-      "Object `??!!!!!` not found.\n"
+      "{'a': <class 'int'>, 'b': <class 'int'>, 'c': <class 'dict'>, 'return': <class 'float'>}\n",
+      "\n",
+      "<class 'int'> 7\n"
      ]
     }
    ],
    "source": [
     "# مشخص کردن نوع خروجی تابع\n",
-    "def func(a : int, b : int, c : int = 5) -> float:  # دادن مقدار پیشفرض\n",
-    "    return a+b+c\n",
+    "def func(a : int , b : int = 9, **c : dict) -> float:  # دادن مقدار پیشفرض\n",
+    "    return a+b\n",
     "\n",
-    "print(type(func(3, 4, 5)), func(3,4,5))\n",
+    "print(func.__annotations__)\n",
+    "print()\n",
+    "print(type(func(3, 5,  c=5 )), func(3,4, c=5 ))\n",
     "\n",
-    "????!!!!!"
+    "# ????!!!!!"
    ]
   },
   {
@@ -712,10 +719,10 @@
     "y = func\n",
     "\n",
     "y(2)\n",
-    "\n",
+    "# 6->9\n",
     "# ویژگی فرست کلاس ها\n",
-    "# 1. Can be created at runtime.\n",
-    "# 2. Can be assigned to a variable.\n",
+    "# 1. Can be created at runtime. ممکنه در شرط یا در تابع دیگر تعریف شوند\n",
+    "# 2. Can be assigned to a variable. f = func\n",
     "# 3. Can be passed as a argument to a function.\n",
     "# 4. Can be return as a result from a function.\n",
     "# 5. Can have properties and methods.\n",
@@ -762,51 +769,47 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "b2f82524-f1f6-4c31-be1b-eeed5d71c6e3",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "1a9b0d46-4352-4f72-9d2b-9a53d31a173a",
-   "metadata": {},
-   "source": [
-    "هنگامی که برنامه ما در کنار سایر برنامه ها قرار میگیرد ممکن است اشیائی با نام یکسان ولی در برنامه های متفاوت وجود داشته باشند"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "d1f581e7-5e79-4ed3-a0c3-25ea379cdfec",
-   "metadata": {},
-   "source": [
-    "فضانام مانند نام خانوادگی است که افراد با اسم یکسان با یکدیگر تمایز داده شوند"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "0409a3af-f23d-4df6-9519-49d113e21f9b",
+   "execution_count": 33,
+   "id": "ad5dbd19-3ebb-4eed-b2c9-b859a1ee693c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "action:  a\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[894, 68, 47, 13, 12, 6, 5, 2, 1, 0]\n"
+     ]
+    }
+   ],
    "source": [
-    "# یک دیکنشری برای هر برنامه تعریف می شود که اشیاء برنامه را مشخص می کند"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "ee5fab0b-9c3f-4704-bec5-5b1b55640b1f",
-   "metadata": {},
-   "source": [
-    "حوزه محیطی است که دسترسی به فضانام در آن مشخص می شود"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "5195d870-3d0b-49d9-ab55-befd3d9e0095",
-   "metadata": {},
-   "source": [
-    "در صورتی که فضانام را مشخص نکنیم، با یک اسم شیئی فراخوانده می شود که در یک حوزه هست"
+    "# برگشت دادن تابع   \n",
+    "\n",
+    "def mysort(s):\n",
+    "\n",
+    "    def descending(mylist):\n",
+    "        print(sorted(mylist, reverse = True))\n",
+    "\n",
+    "    def ascending(mylist):\n",
+    "        print(sorted(mylist))\n",
+    "        \n",
+    "    if s == 'd':\n",
+    "        return ascending\n",
+    "    elif s == 'a':\n",
+    "        return descending\n",
+    "    \n",
+    "l = [5, 6, 12, 2, 1, 68, 47, 894, 13, 0]\n",
+    "\n",
+    "action = input('action: ')\n",
+    "func = mysort(action)\n",
+    "func(l)"
    ]
   },
   {
@@ -824,6 +827,7 @@
    "id": "ed3d299e-b3f7-4ea0-af6d-09808b1868b8",
    "metadata": {},
    "source": [
+    "pass by value    default-->pass by refrence\n",
     "ارسال با ارجاع یعنی آدرس آرگومان ها به تابع ارسال می شود و ارسال با مقدار یعنی فقط مقدار متغیر آرگومان به تابع ارسال میشود"
    ]
   },
@@ -860,6 +864,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7d630944-a7dd-4fa7-8207-89c1f23c106a",
+   "metadata": {},
+   "source": [
+    "در ارسال با ارجاع مقدار متغییر تغییر میکند"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 23,
    "id": "83ed2123-0105-4c16-9fb1-ecfbb4c9a0e7",
@@ -881,11 +893,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "f31ca264-1f36-4e4f-aed2-03a8c2a97803",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 9, 0]\n",
+      "[1, 3, 4, 6]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def func(a):\n",
+    "    a = [1,2] \n",
+    "    # or\n",
+    "    a = a + [3,9,0]\n",
+    "    print(a)\n",
+    "    \n",
+    "a = [1,3,4,6]\n",
+    "func(a)\n",
+    "print(a)\n",
+    "\n",
+    "# در اینجا در داخل فانکشن اصلا یک متغییر دیگه ساختیم"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "3469ca9c-0a40-4207-8ad4-2f6bb1e03eed",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 3, 4, 6, 1, 12]\n",
+      "[1, 3, 4, 6, 1, 12]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def func(a):\n",
+    "    a += [1,2]\n",
+    "    a[5] = 12\n",
+    "    print(a)\n",
+    "    \n",
+    "a = [1,3,4,6]\n",
+    "func(a)\n",
+    "print(a)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -897,7 +956,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "id": "325bc31a-a88a-4504-938e-fef0bda44694",
    "metadata": {},
    "outputs": [],
@@ -914,18 +973,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 10,
    "id": "c7934ce0-c054-4d42-a757-39259a13e27e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n",
+      "6\n"
+     ]
+    }
+   ],
    "source": [
     "# اگر میخواهیم تغییر نا پذیر ها نیز در نتیجه ارسال با ارجاع باشند:\n",
     "def func(a):\n",
     "    a += 1\n",
+    "    print(a)\n",
     "    return a\n",
     "\n",
-    "x = 5\n",
-    "x = func(x)  # لازم است به این شکل عمل شود"
+    "a = 5\n",
+    "a = func(a)  # لازم است به این شکل عمل شود\n",
+    "print(a)"
    ]
   },
   {
@@ -953,7 +1023,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
