--- a/08_SyntaxLearn_DataTypeMethods_2.ipynb
+++ b/08_SyntaxLearn_DataTypeMethods_2.ipynb
@@ -27,7 +27,7 @@
     }
    ],
    "source": [
-    "# چهار تابع داخلی، مهم و قابل استفاده برای اعداد\n",
+    "# چهار تابع داخلی، مهم و قابل استفاده برای اعداد در داخل ماژول\n",
     "f1 = divmod(5, 2)  # (5 // 2, 5 % 2)\n",
     "print(\"f1\", f1)\n",
     "\n",
@@ -77,13 +77,36 @@
    "source": [
     "# as_integer_ratio\n",
     "# نسبت پیدا می کند\n",
-    "x = 1.5\n",
+    "x = 1.5  # 3/2\n",
     "print(x.as_integer_ratio())  # خود عدد را هم می توان جای ایکس آورد ولی بهتر است داخل پرانتز آورد"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
+   "id": "933064b4-ca33-445a-b20c-5e373f31d997",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0b10000\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "# bit_count   تعداد ارقام یک در باینری را برمیگرداند \n",
+    "\n",
+    "x = 16\n",
+    "print(bin(x))\n",
+    "print(x.bit_count())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "2ef58f23",
    "metadata": {},
    "outputs": [
@@ -91,22 +114,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4\n"
+      "5\n"
      ]
     }
    ],
    "source": [
     "# bit_length\n",
     "# برگرداندن تعداد رقم های باینری عدد\n",
-    "x = 10\n",
-    "print(x.bit_length())\n",
-    "\n",
-    "# bit_count  تعداد ارقام یک در باینری را برمیگرداند !!!?"
+    "x = 16\n",
+    "print(x.bit_length())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 6,
    "id": "281c3c6c",
    "metadata": {},
    "outputs": [
@@ -124,9 +145,9 @@
     "# conjugate, imag و real\n",
     "# برای اعداد مختلط\n",
     "x = 3 + 4j\n",
-    "print(x.conjugate())  # آخری پرانتز دارد\n",
-    "print(x.imag) # اخرش پرانتز ندارد\n",
-    "print(x.real) # اخرش پرانتز ندارد"
+    "print(x.conjugate())  # مزدوج آخری پرانتز دارد\n",
+    "print(x.imag) # مقیمی اخرش پرانتز ندارد\n",
+    "print(x.real) # حقیقی اخرش پرانتز ندارد"
    ]
   },
   {
@@ -168,7 +189,7 @@
    ],
    "source": [
     "# numerator\n",
-    "# خود عدد را برمیگرداند  #???? !!!!\n",
+    "# صورت کسر  خود عدد را برمیگرداند  #???? !!!!\n",
     "print((456486).numerator)"
    ]
   },
@@ -234,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 10,
    "id": "1c58f4d0",
    "metadata": {},
    "outputs": [
@@ -242,7 +263,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0x1.0800000000000p+4\n"
+      "0x1.0800000000000p+4\n",
+      "16.5\n"
      ]
     }
    ],
@@ -251,7 +273,7 @@
     "# تبدیل با هگزادسیمال\n",
     "f = 16.5\n",
     "print(f.hex())\n",
-    "# print(float.fromhex(\"0x1.0800000000000p+4\")  # از هگزادسیمال به دسیمال\n"
+    "print(f.fromhex(\"0x1.0800000000000p+4\"))  # از هگزادسیمال به دسیمال\n"
    ]
   },
   {
@@ -284,6 +306,34 @@
    "metadata": {},
    "source": [
     "مباحث مرتبط با باینری ها سابقا ذکر شدند"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "af37a50c-8405-422c-a791-e08fda7089a5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "65\n",
+      "257\n",
+      "0b101\n",
+      "0o5\n",
+      "0x5\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(0b0101)\n",
+    "print(0o101)\n",
+    "print(0x0101)\n",
+    "print(bin(5))\n",
+    "print(oct(5))\n",
+    "print(hex(5))"
    ]
   },
   {
@@ -377,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 27,
    "id": "eca515ab",
    "metadata": {},
    "outputs": [
@@ -387,12 +437,25 @@
      "text": [
       "[]\n"
      ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'li' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[27], line 6\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28mprint\u001b[39m(li)\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mdel\u001b[39;00m li\n\u001b[0;32m----> 6\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43mli\u001b[49m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'li' is not defined"
+     ]
     }
    ],
    "source": [
     "# روش دیگر کلیر کردن\n",
     "li = [1, 2, 3]\n",
     "del li[:]\n",
+    "print(li)\n",
+    "del li\n",
     "print(li)"
    ]
   },
@@ -470,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "id": "68c95876",
    "metadata": {},
    "outputs": [
@@ -478,14 +541,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1, 2, 3, 4, 7, 8]\n"
+      "[1, 2, 3, 4, 2, 7, 8]\n"
      ]
     }
    ],
    "source": [
     "# extend  توسعه لیست اولیه به لیست داخل آرگومان\n",
     "li = [1, 2, 3]\n",
-    "x = [4, 7, 8]\n",
+    "x = [4, 2, 7, 8]\n",
     "li.extend(x)\n",
     "print(li)"
    ]
@@ -514,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 26,
    "id": "a31b13ae",
    "metadata": {},
    "outputs": [
@@ -523,22 +586,24 @@
      "output_type": "stream",
      "text": [
       "2\n",
+      "6\n",
       "5\n"
      ]
     }
    ],
    "source": [
     "# index  برگرداندن اولین ایندکس عضو مورد نظر\n",
-    "li = [1, 2, 3, 3, 4, 1]\n",
+    "li = [1, 4, 3, 3, 3,  4, 1]\n",
     "print(li.index(3))\n",
     "print(li.index(1, 2))  # برگرداند ایندکس 1 در لیست بعد از عنصر شمار 2\n",
-    "# list.index(a, b, c)  آ عنصر مورد نظر، ب و س بازه ایندکسی جستجو\n",
-    "#rindex, lindex"
+    "# list.index(a, b, c) # آ عنصر مورد نظر،در بازه بی و سی  ایندکسی جستجو\n",
+    "#rindex, lindex\n",
+    "print(li.index(4, 2, 6)) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "03ed2065",
    "metadata": {},
    "outputs": [
@@ -578,7 +643,7 @@
     "# pop  برگرداندن عنصر ایندکس مشخص شده و سپس حذف آن\n",
     "# اگر آرگومان مربوط به ایندکس خالی باشد دیفالت آخرین عنصر\n",
     "li = [1, 2, 3, 4, 5]\n",
-    "print(li.pop())\n",
+    "print(li.pop())  # وقتی ورودی ننویسیم اخرین عنصر را حذف میکند      \n",
     "print(li)\n",
     "print(li.pop(0))\n",
     "print(li)"
@@ -599,7 +664,7 @@
     }
    ],
    "source": [
-    "# remove  حذف عنصر مورد نظر، ایندکس نمیدهیم\n",
+    "# remove  اولین عنصری ک پیدا میکند - حذف عنصر مورد نظر، ایندکس نمیدهیم\n",
     "li = [1, 3, 2, 3, 4, 5]\n",
     "li.remove(3)\n",
     "print(li)"
@@ -1019,7 +1084,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 28,
    "id": "79cda5aa",
    "metadata": {},
    "outputs": [
@@ -1027,13 +1092,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'a': 7, 'b': 7, 'c': 7}\n"
+      "{'a': (9, 7), 'b': (9, 7), 'c': (9, 7)}\n"
      ]
     }
    ],
    "source": [
     "# fromkeys  یک دیکشنری جدید می سازد\n",
-    "print(dict.fromkeys((\"a\",\"b\",\"c\"), 7))  # مقدار دیفالت 7 است و اگر آرگومان خالی باشد نان می شود"
+    "print(dict.fromkeys((\"a\",\"b\",\"c\"), (9, 7)))  # مقدار دیفالت 7 است و اگر آرگومان خالی باشد نان می شود"
    ]
   },
   {
@@ -1085,7 +1150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 29,
    "id": "43f22562",
    "metadata": {},
    "outputs": [
@@ -1096,6 +1161,17 @@
       "1\n",
       "0\n"
      ]
+    },
+    {
+     "ename": "KeyError",
+     "evalue": "'c'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[29], line 6\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28mprint\u001b[39m(d\u001b[38;5;241m.\u001b[39mpop(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124ma\u001b[39m\u001b[38;5;124m\"\u001b[39m))\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28mprint\u001b[39m(d\u001b[38;5;241m.\u001b[39mpop(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mc\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;241m0\u001b[39m))  \u001b[38;5;66;03m# اگر عنصر وجود نداشته باشد صفر را برمیگرداند\u001b[39;00m\n\u001b[0;32m----> 6\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43md\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mpop\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mc\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m)\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'c'"
+     ]
     }
    ],
    "source": [
@@ -1103,7 +1179,8 @@
     "# پاپ مقدار کلید مشخص شده را برگردانده و سپس حذف میکند\n",
     "d = {\"a\":1, \"b\":2}\n",
     "print(d.pop(\"a\"))\n",
-    "print(d.pop(\"c\", 0))  # اگر عنصر وجود نداشته باشد صفر را برمیگرداند"
+    "print(d.pop(\"c\", 0))  # اگر عنصر وجود نداشته باشد صفر را برمیگرداند\n",
+    "print(d.pop(\"c\"))  "
    ]
   },
   {
@@ -1132,7 +1209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 30,
    "id": "3a8df513",
    "metadata": {},
    "outputs": [
@@ -1141,8 +1218,9 @@
      "output_type": "stream",
      "text": [
       "3\n",
+      "None\n",
       "0\n",
-      "{'a': 1, 'b': 2, 'c': 3, 'd': 4, 'p': 0}\n"
+      "{'a': 1, 'b': 2, 'c': 3, 'd': 4, 'j': None, 'p': 0}\n"
      ]
     }
    ],
@@ -1151,6 +1229,7 @@
     "# اگر کلید نباشد آیتمی به دیکت اضافه میکند که مقدار پیشفرض قابل تعیین است\n",
     "d = {\"a\":1, \"b\":2, \"c\":3, \"d\":4}\n",
     "print(d.setdefault(\"c\"))\n",
+    "print(d.setdefault(\"j\"))\n",
     "print(d.setdefault(\"p\", 0))  # اگر صفر نباشد نان هست\n",
     "print(d)"
    ]
@@ -1242,7 +1321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 31,
    "id": "d9a6bd9b",
    "metadata": {},
    "outputs": [
@@ -1257,7 +1336,7 @@
    "source": [
     "# ترفند تغییر کلید در دیکشنری\n",
     "d = {'a':1, 'b':2, 'c':3, 'x':4}\n",
-    "d['d'] = d.pop('x')\n",
+    "d['d'] = d.pop('x') # کلید را پاک میکند و مقدار آنرا برمیگرداند\n",
     "print(d)"
    ]
   },
@@ -1271,7 +1350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 32,
    "id": "fc28c36f",
    "metadata": {},
    "outputs": [
@@ -1289,7 +1368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 33,
    "id": "fadcb236",
    "metadata": {},
    "outputs": [
@@ -1390,7 +1469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "id": "b5392c0c",
    "metadata": {},
    "outputs": [
@@ -1398,7 +1477,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Reza\tdolati\n",
+      "Reza    dolati\n",
       "Reza dolati\n"
      ]
     }
@@ -1407,7 +1486,7 @@
     "# expandtabs \n",
     "# کاراکترهای تب را با اسپیس جایگزین می کند\n",
     "s = \"Reza\\tdolati\"\n",
-    "print(s)\n",
+    "print(s.expandtabs())\n",
     "print(s.expandtabs(1)) # با تعداد اسپیس انتخابی. دیفالت 4"
    ]
   },
@@ -1548,7 +1627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 15,
    "id": "bbe3fa27",
    "metadata": {},
    "outputs": [
@@ -1558,7 +1637,7 @@
        "3"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1568,6 +1647,7 @@
     "# یافتن ایندکس کاراکتر در رشته\n",
     "s = \"Reaza Dolati\"\n",
     "s.index(\"z\")\n",
+    "# s.rindex(\"a\")   # از سمت راست پیدا میکند\n",
     "# تفاوت با find\n",
     "# این است که در فایند اگر کاراکتر نباشد -1 برگدانده می شود\n",
     "# ولی در ایندکس خطا می دهد"
@@ -1722,7 +1802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 7,
    "id": "b4b0005a",
    "metadata": {},
    "outputs": [
@@ -1730,8 +1810,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{65: 1593, 108: 1604, 105: 1740}\n",
-      "علی\n"
+      "{105: 1594, 108: None}\n",
+      "{65: 'D', 108: 't', 105: None}\n",
+      "Aغ\n",
+      "Dt\n",
+      "\n",
+      "Dlf\n"
      ]
     }
    ],
@@ -1741,14 +1825,27 @@
     "# translate\n",
     "# ترجمه رشته از جدول ساخته شده از میکترنس\n",
     "s = \"Ali\"\n",
-    "table = str.maketrans(\"Ali\",\"علی\")  # میتوان به جای ورودی دیکشنری داد\n",
+    "d = {\"A\": \"D\" ,\"l\": \"t\", \"i\": None}\n",
+    "table = str.maketrans(\"i\", \"غ\", \"l\")     # میتوان به جای ورودی دیکشنری داد \n",
+    "# ورودی دوم را بجای دوم قرار میدهد\n",
+    "# بجای ورودی سوم نان قرار میدهد\n",
+    "table2 = str.maketrans(d) # تبدیل به یونیکد ها میکند\n",
     "print(table)\n",
-    "print(s.translate(table))"
+    "print(table2)\n",
+    "\n",
+    "print(s.translate(table))\n",
+    "print(s.translate(table2))\n",
+    "\n",
+    "print()\n",
+    "\n",
+    "d = {65: \"D\" , 105: \"f\"}\n",
+    "# با نوشتن دیکشنری ب این شکل نیازی به تیبل نیست\n",
+    "print(s.translate(d))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 8,
    "id": "0585cf22",
    "metadata": {},
    "outputs": [
@@ -1762,14 +1859,14 @@
    ],
    "source": [
     "# partition\n",
-    "# تقسیم رشته به سه قسمت در تاپل\n",
+    "#  با توجه به ورودی تقسیم رشته به سه قسمت در تاپل\n",
     "s = \"Reza 01 Dolati\"\n",
     "print(s.partition(\"01\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 11,
    "id": "088a58d2",
    "metadata": {},
    "outputs": [
@@ -1779,7 +1876,8 @@
      "text": [
       "--Reza Dolati---\n",
       "Reza Dolati---\n",
-      "poj\n"
+      "poj\n",
+      "yyxpoj\n"
      ]
     }
    ],
@@ -1791,7 +1889,30 @@
     "print(s.lstrip(\"-\"))\n",
     "\n",
     "s2 = \"xyyyxpoj\"\n",
-    "print(s2.lstrip(\"yx\"))"
+    "print(s2.lstrip(\"yx\"))\n",
+    "print(s2.removeprefix(\"xy\"))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "0cc49597-7e76-4f00-87bd-1321c6e83125",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['reza ', ' dolat , ali , python']\n",
+      "['reza , dolat , ali ', ' python']\n"
+     ]
+    }
+   ],
+   "source": [
+    "s = \"reza , dolat , ali , python\"\n",
+    "\n",
+    "print(s.split(\",\" , 1))\n",
+    "print(s.rsplit(\",\" , 1))"
    ]
   },
   {
@@ -1908,7 +2029,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
