--- a/10_SyntaxLearn_Comprehension&Walrus.ipynb
+++ b/10_SyntaxLearn_Comprehension&Walrus.ipynb
@@ -18,6 +18,98 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "id": "5176a1cc-788f-408e-b7e4-ade7547a2ee2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "5\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 4\n",
+    "print(x)\n",
+    "\n",
+    "print(y:=5)\n",
+    "\n",
+    "print(y-4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "aeffce3f-6692-4a10-bc59-1738c4bef85a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "name (q for quit):  de\n",
+      "name (q for quit):  q\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "names: ['de']\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = []\n",
+    "s = input(\"name (q for quit): \")\n",
+    "while s.lower()!= \"q\":\n",
+    "    x.append(s)\n",
+    "    s = input(\"name (q for quit): \")\n",
+    "    \n",
+    "print(\"names:\", x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "2f816f72-66a0-42d2-9fba-605f4796b688",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "name (q for quit):  frc\n",
+      "name (q for quit):  frc\n",
+      "name (q for quit):  q\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "names: ['frc', 'frc']\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = []\n",
+    "while True:\n",
+    "    s = input(\"name (q for quit): \")  \n",
+    "    if(s.lower() == \"q\"):\n",
+    "        break\n",
+    "    x.append(s)\n",
+    "\n",
+    "    \n",
+    "print(\"names:\", x)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "id": "fbc0ddde",
    "metadata": {},
@@ -73,6 +165,263 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 10,
+   "id": "1cda5b14-8216-4fa4-8c57-656d29d84284",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9\n",
+      "49\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "def func(z):\n",
+    "    print(z ** 2)\n",
+    "    \n",
+    "func(x := 3)\n",
+    "func(z=7)\n",
+    "\n",
+    "\n",
+    "print(x)\n",
+    "# print(z) #error"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "3be2a816-e33b-48e1-a70e-b383ceed4bd1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 5\n",
+    "x = z = 5\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "9db946d7-c225-4ee2-8b65-b5f12c385f19",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (204025214.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[12], line 1\u001b[0;36m\u001b[0m\n\u001b[0;31m    x := 5\u001b[0m\n\u001b[0m      ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "x := 5\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "c2cff1c1-4411-423c-a9ed-b9729ed1f4b9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "z = (x := 5)\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "6535772d-da4b-4c2b-8166-dcbfcb73f31d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "z = (x := 5) + 1\n",
+    "print(x)\n",
+    "print(z)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "ff7de51b-cd51-4eeb-8bb4-647928c39872",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "25\n",
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "def func(z = (x:= 5)):\n",
+    "    print(z ** 2)\n",
+    "    \n",
+    "func()\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "d085fbda-90da-410e-9999-ce1d0e7a4a08",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "25\n",
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "def func(z : (x:= 5) = 5):\n",
+    "    print(z ** 2)\n",
+    "    \n",
+    "func()\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "80a886ba-47e0-4c4f-a72d-c16baa2689e1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "25\n",
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "def func(z):\n",
+    "    print(z ** 2)\n",
+    "    \n",
+    "func(z = (x:= 5))\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "01cdca35-b02d-47fd-9c39-8d4ac1161977",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-   5\n",
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "s = -5\n",
+    "print(f\"{s:=5}\")\n",
+    "\n",
+    "# در اف استرینگ ها باید از پرانتز استفادخ بکنیم\n",
+    "print(f\"{(s:=5)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "e34aeaff-3cc6-4f5d-bfb4-6edf603f8bcb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'len': 4, 'sum': 10, 'avg': 2.5}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# مثال\n",
+    "x = [1, 2, 3, 4]\n",
+    "\n",
+    "d = {\n",
+    "    \"len\": len(x),\n",
+    "    \"sum\": sum(x),\n",
+    "    \"avg\": sum(x) / len(x)\n",
+    "}\n",
+    "\n",
+    "print(d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "17b00078-a85d-43f5-a671-8b089b33cb91",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'len': 4, 'sum': 10, 'avg': 2.5}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# مثال\n",
+    "x = [1, 2, 3, 4]\n",
+    "\n",
+    "l = len(x)\n",
+    "s = sum(x)\n",
+    "\n",
+    "d = {\n",
+    "    \"len\": l,\n",
+    "    \"sum\": s,\n",
+    "    \"avg\": s / l\n",
+    "}\n",
+    "\n",
+    "print(d)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "id": "3f49782c",
    "metadata": {},
@@ -86,6 +435,7 @@
     }
    ],
    "source": [
+    "# در دیکشنری باید در پرانتز باشد\n",
     "# مثال\n",
     "x = [1, 2, 3, 4]\n",
     "\n",
@@ -139,7 +489,7 @@
     }
    ],
    "source": [
-    "# Normal\n",
+    "# Normal \n",
     "s = []\n",
     "for i in range(10):\n",
     "    s.append(i ** 2)\n",
@@ -165,6 +515,25 @@
     "# Comprehension\n",
     "x = [i ** 2 for i in range(10)]\n",
     "print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "c0d7e49c-b244-4f7a-8a60-cef3ee2acee4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 4, 9, 16, 25, 36, 49, 64, 81]\n"
+     ]
+    }
+   ],
+   "source": [
+    "m = list(map(lambda i : i**2 , range(10)))\n",
+    "print(m)"
    ]
   },
   {
@@ -638,7 +1007,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 29,
    "id": "e896b19a",
    "metadata": {},
    "outputs": [
@@ -646,8 +1015,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[135, 57, 115]\n",
-      "[108, 127, 120, 145, 120, 114, 123]\n"
+      "[56, 69, 76]\n",
+      "[131, 135, 118, 130, 141, 106]\n",
+      "[137, 120, 144, 125]\n"
      ]
     }
    ],
@@ -660,13 +1030,21 @@
     "print(x1)  # مقادیر زیر 100 نیز برگردانده شده\n",
     "# زیرا فراخوانه بار اول تابع با دومی فرق دارد\n",
     "\n",
+    "\n",
+    "x3 = []\n",
+    "for i in range(10):\n",
+    "    if (n := func()) > 100: \n",
+    "        x3.append(n)\n",
+    "print(x3)\n",
+    "\n",
+    "\n",
     "x2 = [i for _ in range(10) if (i:= func()) > 100]\n",
     "print(x2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 30,
    "id": "ba4b7e23",
    "metadata": {},
    "outputs": [
@@ -679,7 +1057,7 @@
        " 'sahel': [0, 0, 0, 0, 0]}"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -709,7 +1087,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
