--- a/11_EncodDecod_UNICODE.ipynb
+++ b/11_EncodDecod_UNICODE.ipynb
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "id": "6c6efec1",
    "metadata": {},
    "outputs": [
@@ -284,6 +284,7 @@
      "text": [
       "b'r'\n",
       "b'a'\n",
+      "b'tf'\n",
       "<class 'bytes'>\n"
      ]
     }
@@ -294,31 +295,192 @@
     "print(s)\n",
     "s = bytes(\"a\", \"utf-8\")\n",
     "print(s)\n",
+    "s = \"tf\".encode(\"utf-8\")\n",
+    "print(s)\n",
     "print(type(s))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "id": "33290bb0",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "bytearray(b'abbas')"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "bytearray(b'abbas')\n"
+     ]
     }
    ],
    "source": [
     "# bytearray\n",
     "s = bytearray(\"abbas\", \"utf-8\")\n",
-    "s"
+    "print(s)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "52d5dbd9-98f4-4955-8210-1d5aeb471aa7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "97\n",
+      "rezÃ¦\n",
+      "reza\n",
+      "reza\n"
+     ]
+    }
+   ],
+   "source": [
+    "name = bytes('reza' , 'utf-8')\n",
+    "# \\x72\\x65\\x7a\\xc3\\xa6\n",
+    "\n",
+    "print(name[3])\n",
+    "print('\\x72\\x65\\x7a\\xc3\\xa6')\n",
+    "# دکود بایت ها\n",
+    "print(name.decode('utf-8'))\n",
+    "print(str(name ,'utf-8'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "c12fede8-a598-4988-816d-49c181fcc806",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "b'\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00'\n"
+     ]
+    }
+   ],
+   "source": [
+    "name = bytes(8)\n",
+    "print(name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "95be2782-e24f-4a30-9b9a-1fc5606fb4bc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "b'\\x01\\x03b8'\n"
+     ]
+    }
+   ],
+   "source": [
+    "name = bytes([1, 3, 98, 56])\n",
+    "print(name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "b62a0844-39ef-4704-b3c4-7f2b6b96821c",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'bytes' object does not support item assignment",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[19], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m name \u001b[38;5;241m=\u001b[39m \u001b[38;5;124mb\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtf\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[0;32m----> 2\u001b[0m name[\u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m112\u001b[39m\n",
+      "\u001b[0;31mTypeError\u001b[0m: 'bytes' object does not support item assignment"
+     ]
+    }
+   ],
+   "source": [
+    "name = b'tf'\n",
+    "name[0] = 112"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "5d03cf2f-9e82-4c05-a6d7-5b922bf19667",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pf\n"
+     ]
+    }
+   ],
+   "source": [
+    "name = bytearray('tf' , 'utf-8')\n",
+    "name[0] = 112\n",
+    "print(name.decode('utf-8'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "71306928-c3a6-4f1f-a7ec-126027fba73a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "b'tf\\\\N{ARABIC LETTER BEH}\\\\N{ARABIC LETTER QAF}'\n"
+     ]
+    }
+   ],
+   "source": [
+    "name = bytes('tfبق' , 'ascii' , 'ignore')\n",
+    "name = bytes('tfبق' , 'ascii' , 'namereplace')\n",
+    "\n",
+    "# strict ignore replace namereplace\n",
+    "\n",
+    "print(name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "2a723f76-8a9d-4d1c-946b-2145ff9a7d58",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "b'\\x00\\x00\\x00\\x05'\n",
+      "b'\\x00\\x00\\x00 '\n",
+      " \n"
+     ]
+    }
+   ],
+   "source": [
+    "print((5).to_bytes(4, 'big'))\n",
+    "print((32).to_bytes(4, 'big'))\n",
+    "print('\\x20')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e91e07e2-92cf-4aaf-b191-70c07942130c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -337,7 +499,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
